Backgorund issue on mobile

--- a/tasklist/styles.css
+++ b/tasklist/styles.css
@@ -125,7 +125,8 @@ body {
   visibility: visible;
 }
 
-.jumbotron {
+.dbj-container .jumbotron {
+  background: none;
   background-color: rgba(38, 50, 56, 0.6);
   color: #fff;
   text-align: center;
